Show city and regiion in the right on home page for event

--- a/alpha/accounts/templates/accounts/_account_archived_events_table.html
+++ b/alpha/accounts/templates/accounts/_account_archived_events_table.html
@@ -7,7 +7,7 @@
 {% paginate 6 events using 'archived_events_page' %}
 <div class="account-entry-wrapper entry-wrapper">
     {% for event in events %}
-        <div class="entry-info with-delete-action">
+        <div class="entry-info with-actions">
             {% short_single_event event %}
 
             <div class="event-edit-actions">
