--- a/alpha/accounts/templates/accounts/_reminder_events_table.html
+++ b/alpha/accounts/templates/accounts/_reminder_events_table.html
@@ -6,7 +6,7 @@
 
 <div class="account-entry-wrapper entry-wrapper">
     {% for event in reminder_events %}    
-        <div class="entry-info with-delete-action">
+        <div class="entry-info with-actions">
             {% short_single_event event %}
             <div class="event-edit-actions">
                 <a href="{% url 'remove_remind_me' event.id %}" class="event-edit-actions__item">
