--- a/alpha/event/templates/events/list/short_single_event.html
+++ b/alpha/event/templates/events/list/short_single_event.html
@@ -1,6 +1,7 @@
 {% load date_formatting %}
 {% load cropping %}
 {% load event_tags %}
+{% load location %}
 
 <a href="{% event_link event %}">
     <div class="entry-img-prev">
@@ -26,8 +27,18 @@
                 <span class="event-time">{{event.first_occurrence.start_time|just_time|lower}} - {{event.first_occurrence.end_time|just_time|lower}}*</span>
             {% endif %}
         </div>
-        <div class="entry-description">
-            {{ event.venue.name }}, {% if event.venue.street %}{% if event.venue.street_number %}{{ event.venue.street_number }} {% endif %}{{ event.venue.street }}, {% endif %}{{ event.venue.city.name_std }}
+        <div class="event-location">
+            <div class="event-name-and-street">
+                {{ event.venue.name }}
+                {% if event.venue.street %}
+                    , {% if event.venue.street_number %}{{ event.venue.street_number }} {% endif %}
+                    {{ event.venue.street }}
+                {% endif %}
+            </div>
+            <div class="event-city-name">
+                {{ event.venue.city.name_std }}, {{ event.venue.city.region.name_std|region_shortcut }}
+            </div>
         </div>
+
     </div>
 </a>
