--- a/alpha/venues/templates/venue_accounts/_venue_archived_events_table.html
+++ b/alpha/venues/templates/venue_accounts/_venue_archived_events_table.html
@@ -7,7 +7,7 @@
 {% paginate 6 venue_archived_events using "archived_events_page" %}
 <div class="account-entry-wrapper entry-wrapper">
     {% for event in venue_archived_events %}
-        <div class="entry-info with-delete-action">
+        <div class="entry-info with-actions">
             {% short_single_event event %}
 
             <div class="event-edit-actions">
