Add venue link on event details page

--- a/alpha/event/templates/events/_search_pad_event_details.html
+++ b/alpha/event/templates/events/_search_pad_event_details.html
@@ -87,7 +87,14 @@
                                                 {{event.start_time|just_time|lower}} - {{event.end_time|just_time|lower}}
                                             </div>
                                             <div class="event-venue">
-                                                <span class="accented">{{ event.venue.name }}</span>
+                                                {% if event.venue.venue_account %}
+                                                    <a href="{% url "public_venue_account" event.venue.venue_account.slug %}">
+                                                        {{ event.venue.name }}
+                                                    </a>
+                                                {% else %}
+                                                    <span>{{ event.venue.name }}</span>
+                                                {% endif %}
+                                                
                                                 {% if event.venue.street %}
                                                     <span>
                                                         {% if event.venue.street_number %}
