--- a/alpha/cityfusion_admin/templates/cf-admin/change_venue_owner.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/change_venue_owner.html
@@ -41,8 +41,16 @@
 
                 <table class="profile-table" celpadding="0" cellspacing="0">
                     <tr>
-                        <th>Venue</th>
-                        <th>Owner</th>
+                        <th>
+                            <a href="?order=venue">
+                                Venue
+                            </a>
+                        </th>
+                        <th>
+                            <a href="?order=owner">
+                                Owner
+                            </a>
+                        </th>
                         <th width="50%">Change owner</th>
                     </tr>
 
