--- a/alpha/advertising/static/styles/advertising-setup.css
+++ b/alpha/advertising/static/styles/advertising-setup.css
@@ -267,10 +267,9 @@ body .hintbox {
 }
 
 .advertising-form__details {
-    width: 595px;
+    width: 681px;
     background: #ffffff;
     border: 1px solid #B9B8B8;
-    margin-left: 30px;
 }
 
 .advertising-form__details-title {
@@ -294,7 +293,7 @@ body .hintbox {
 
 .advertising-form__budget {
     width: 311px;
-    margin-left: 18px;
+    margin-left: 11px;
     background: #022e52;
     position: relative;
     padding-bottom: 116px;
@@ -412,6 +411,11 @@ input[type="radio"]:checked + label.payments__check-label {
 .payments__item-label {
     height: auto !important;
     margin-left: 16px;
+}
+
+.payments__item-label img {
+    display: block;
+    height: 84px;
 }
 
 .advertising-form__field-title {
