bottom banner removing and bit footer styles correcting

--- a/alpha/event/templates/events/create/create_event.html
+++ b/alpha/event/templates/events/create/create_event.html
@@ -75,5 +75,7 @@
         <div class="clear"></div>
     </div>
 {% endblock %}
-{% block advertising %}
-{% endblock %}
+
+{% block advertising %}{% endblock %}
+
+{% block advertising_footer %}{% endblock %}
