bit footer styles correcting

--- a/alpha/home/static/styles/styles.css
+++ b/alpha/home/static/styles/styles.css
@@ -498,7 +498,7 @@ table.schedule-bar-menu td.selected a {
 }
 
 .footer-ads-container {
-    padding-bottom: 5px;
+    padding-top: 5px;
 }
 
 .footer-site-links
