--- a/alpha/advertising/static/styles/advertising-setup.css
+++ b/alpha/advertising/static/styles/advertising-setup.css
@@ -285,6 +285,76 @@ body .hintbox {
 
 .advertising-form__details-content {
     padding: 35px 0 21px 105px;
+    position: relative;
+}
+
+.advertising-form__ad-sizes-preview {
+    position: absolute;
+    display: none;
+    left: 330px;
+    top: 200px;
+    z-index: 10;
+    width: 580px;
+    height: 545px;
+    background: #ffffff;
+    padding: 5px;
+    box-shadow: 0 0 5px #000;
+    border-radius: 5px;
+}
+
+.advertising-form__ad-sizes-pointer {
+    position: absolute;
+    background: #111111;
+    opacity: 0.5;
+}
+
+.t_300_250 .advertising-form__ad-sizes-pointer {
+    width: 146px;
+    height: 121px;
+    left: 437px;
+    top: 62px;
+}
+
+.t_300_100 .advertising-form__ad-sizes-pointer {
+    width: 146px;
+    height: 47px;
+    left: 7px;
+    top: 7px;
+}
+
+.t_300_600 .advertising-form__ad-sizes-pointer {
+    width: 146px;
+    height: 297px;
+    left: 7px;
+    top: 252px;
+}
+
+.t_728_90 .advertising-form__ad-sizes-pointer {
+    width: 361px;
+    height: 42px;
+    left: 223px;
+    top: 7px;
+}
+
+.t_120_60 .advertising-form__ad-sizes-pointer {
+    width: 57px;
+    height: 27px;
+    left: 372px;
+    top: 237px;
+}
+
+.t_468_60 .advertising-form__ad-sizes-pointer {
+    width: 231px;
+    height: 27px;
+    left: 7px;
+    top: 62px;
+}
+
+.t_120_600 .advertising-form__ad-sizes-pointer {
+    width: 57px;
+    height: 297px;
+    left: 247px;
+    top: 252px;
 }
 
 .advertising-form__details-content .errors {
