--- a/alpha/advertising/templates/advertising/setup/types.html
+++ b/alpha/advertising/templates/advertising/setup/types.html
@@ -31,7 +31,10 @@
                        data-type="advertising-type"
                        data-ad-type="{{ advertising_type.id }}"
                        {% if advertising_type.id in chosen_advertising_types %}checked="checked"{% endif %} />
-                <span for="id_advertising_type_{{ advertising_type.id }}">{{ advertising_type }}</span>
+                <span for="id_advertising_type_{{ advertising_type.id }}"
+                      data-ad-type="t_{{ advertising_type.width }}_{{ advertising_type.height }}">
+                    {{ advertising_type }}
+                </span>
             </td>
             <td class="ad-type-col">
                 <div class="ad-type-col-wrapper">
