--- a/alpha/home/assets/styles/styles.css
+++ b/alpha/home/assets/styles/styles.css
@@ -7,8 +7,8 @@
 
 @font-face {
     font-family: HelveticaNeueLTCom;
-    src: url('/static/fonts/HelveticaNeueLTComBd.ttf'),
-         url('/static/fonts/HelveticaNeueLTComBd.eot'); /* IE9 */
+    src: url('../fonts/HelveticaNeueLTComBd.ttf'),
+         url('../fonts/HelveticaNeueLTComBd.eot'); /* IE9 */
 
     font-weight: bold;
     font-style: normal;
@@ -16,8 +16,8 @@
 
 @font-face {
     font-family: HelveticaNeueLTCom;
-    src: url('/static/fonts/HelveticaNeueLTComMd.ttf'),
-         url('/static/fonts/HelveticaNeueLTComMd.eot'); /* IE9 */
+    src: url('../fonts/HelveticaNeueLTComMd.ttf'),
+         url('../fonts/HelveticaNeueLTComMd.eot'); /* IE9 */
 
     font-weight: normal;
     font-style: normal;
@@ -25,8 +25,8 @@
 
 @font-face {
     font-family: HelveticaNeueLTComLight;
-    src: url('/static/fonts/HelveticaNeueLTComLt.ttf'),
-         url('/static/fonts/HelveticaNeueLTComLt.eot'); /* IE9 */
+    src: url('../fonts/HelveticaNeueLTComLt.ttf'),
+         url('../fonts/HelveticaNeueLTComLt.eot'); /* IE9 */
     font-weight: normal;
     font-style: normal;
 }
@@ -247,7 +247,7 @@ html.preview, body.preview {
     width: 20px;
     height: 20px;
     position: absolute;
-    background: url(/static/images/search-icon.png) right no-repeat;
+    background: url(../images/search-icon.png) right no-repeat;
     right: 2px;
     top: 1px;
     cursor: pointer;
@@ -546,7 +546,7 @@ table.schedule-bar-menu td.selected a {
     display: inline-block;
     height: 23px;
     width: 21px;
-    background-image: url(/static/images/footer-icon-sprite.png);
+    background-image: url(../images/footer-icon-sprite.png);
     vertical-align: middle;
     border: 0;
 }
@@ -598,7 +598,7 @@ a {
     padding-left:25px;
     font-size:11px;
     color:#eb8a19;
-    background:url(/static/images/tag_icon.png) left no-repeat;
+    background:url(../images/tag_icon.png) left no-repeat;
 }
 
 #hintbox{
@@ -624,23 +624,23 @@ a {
     padding: 5px 10px 10px 10px;
 }
 .buttonq{
-    background: url(/static/images/question.png) no-repeat;
+    background: url(../images/question.png) no-repeat;
     height: 22px;
     width: 25px;
 }
 .buttonq:hover{
-    background: url(/static/images/question_hover.png) no-repeat;
+    background: url(../images/question_hover.png) no-repeat;
     height: 22px;
 }
 
 .buttonq.mini{
-    background: url(/static/images/question-mini.png) no-repeat;
+    background: url(../images/question-mini.png) no-repeat;
     height: 13px;
     width: 13px;
     display: inline-block;
 }
 .buttonq.mini:hover{
-    background: url(/static/images/question_hover-mini.png) no-repeat;
+    background: url(../images/question_hover-mini.png) no-repeat;
 }
 
 .clr{
@@ -720,7 +720,7 @@ a {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: url(/static/images/opacity_bg.png) repeat scroll left top transparent;
+    background: url(../images/opacity_bg.png) repeat scroll left top transparent;
     z-index: 100;
 }
 
