--- a/alpha/event/assets/font-awesome/css/font-awesome.css
+++ b/alpha/event/assets/font-awesome/css/font-awesome.css
@@ -27,8 +27,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../font/fontawesome-webfont.eot?v=3.2.1');
-  src: url('../font/fontawesome-webfont.eot?#iefix&v=3.2.1') format('embedded-opentype'), url('../font/fontawesome-webfont.woff?v=3.2.1') format('woff'), url('../font/fontawesome-webfont.ttf?v=3.2.1') format('truetype'), url('../font/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1') format('svg');
+  src: url('/static/font-awesome/font/fontawesome-webfont.eot?v=3.2.1');
+  src: url('/static/font-awesome/font/fontawesome-webfont.eot?#iefix&v=3.2.1') format('embedded-opentype'), url('/static/font-awesome/font/fontawesome-webfont.woff?v=3.2.1') format('woff'), url('/static/font-awesome/font/fontawesome-webfont.ttf?v=3.2.1') format('truetype'), url('/static/font-awesome/font/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1') format('svg');
   font-weight: normal;
   font-style: normal;
 }
