--- a/alpha/event/assets/styles/suggest.css
+++ b/alpha/event/assets/styles/suggest.css
@@ -47,7 +47,7 @@
     top: 0;
     width:24px;
     height:24px;
-    background: url('../images/map.png') no-repeat;
+    background: url('/static/images/map.png') no-repeat;
     cursor: pointer;
     display: block;    
 }
