--- a/alpha/accounts/templates/accounts/in_the_loop_settings.html
+++ b/alpha/accounts/templates/accounts/in_the_loop_settings.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %} 
 {% load i18n %} 
-{% load url from future %} 
+{% load url from future %}
+{% load gears %}
 
 {% block title %}
     {% blocktrans with profile.user.username as username %}
@@ -9,12 +10,9 @@
 {% endblock %} 
 
 {% block head %}
-    <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/accounts/accounts.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/autoSuggest.css" rel="stylesheet" type="text/css" />
 
-    <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>    
-    <script src="{{STATIC_URL}}js/accounts/reminder-options.js" type="text/javascript"></script>
+    {% css_asset_tag "in-the-loop-settings-combine.css" %}
+    {% js_asset_tag "in-the-loop-settings-combine.js" %}
 
     {{ form.map }}
     {{ form.media.js }}
