--- a/alpha/accounts/templates/accounts/reminder_settings.html
+++ b/alpha/accounts/templates/accounts/reminder_settings.html
@@ -2,6 +2,7 @@
 {% load i18n %} 
 {% load url from future %}
 {% load common_tags %}
+{% load gears %}
 
 {% block title %}
     {% blocktrans with profile.user.username as username %}
@@ -10,12 +11,8 @@
 {% endblock %} 
 
 {% block head %}
-    <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />    
-    <link href="{{STATIC_URL}}styles/accounts/accounts.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/timepicker.css" rel="stylesheet" type="text/css" />
-    <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>    
-    <script src="{{STATIC_URL}}js/accounts/reminder-options.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/jquery.ui.timepicker.js" type="text/javascript"></script>
+    {% css_asset_tag "reminder-settings-combine.css" %}
+    {% js_asset_tag "reminder-settings-combine.js" %}
 {% endblock %}
 
 {% block page %}
