--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -3,6 +3,7 @@
 {% load url from future %}
 {% load venue_accounts %}
 {% load common_tags %}
+{% load gears %}
 
 {% block title %}
     {% blocktrans with profile.user.username as username %}
@@ -20,31 +21,11 @@
 {% endblock %} 
 
 {% block head %}
-    <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/browse/browse_event_list.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/browse/event_details.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/accounts/accounts.css" rel="stylesheet" type="text/css" />
-
-    <link href="{{STATIC_URL}}styles/place_autocomplete.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/suggest.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/autoSuggest.css" rel="stylesheet" type="text/css" />
-
+    {% css_asset_tag "profile-detail-combine.css" %}
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en"></script>
-    
     <script src="{{STATIC_URL}}selectable/js/jquery.dj.selectable.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/location/jquery.geocomplete.js"></script>
+    {% js_asset_tag "profile-detail-combine.js" %}   
     
-
-    <script src="{{STATIC_URL}}js/tabs.js" type="text/javascript" ></script>
-    <script src="{{STATIC_URL}}js/browse/jquery.hoverIntent.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/searchpad/ajax-popup.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/searchpad/event-actions.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/searchpad/jump-to-date.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/accounts/link_venue_to_account.js" type="text/javascript" ></script>
-    <script src="{{STATIC_URL}}js/advertising/advertising-images.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/accounts/account.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/notices/notices.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/notices/types/transferring.js" type="text/javascript"></script>
     <script type="text/javascript" src="/facebook-for-turbolinks.js"></script>
 {% endblock %}
 
