--- a/alpha/advertising/templates/advertising/campaign/deposit_funds.html
+++ b/alpha/advertising/templates/advertising/campaign/deposit_funds.html
@@ -3,6 +3,7 @@
 {% load url from future %} 
 {% load dictionary_tags %}
 {% load setup_advertising %}
+{% load gears %}
 
 {% block title %}
     {% blocktrans with profile.user.username as username %}
@@ -11,16 +12,8 @@
 {% endblock %} 
 
 {% block head %}
-    <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />    
-    <link href="{{STATIC_URL}}styles/advertising-setup.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/accounts/accounts.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/crop.css" rel="stylesheet" type="text/css" />
-
-    <script src="{{STATIC_URL}}js/jquery.balloon.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/tabs.js"></script>
-    <script src="{{STATIC_URL}}js/advertising/total-price-calculation.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/advertising/advertising-fund-page.js" type="text/javascript"></script>
+    {% css_asset_tag "deposit-funds-combine.css" %}
+    {% js_asset_tag "deposit-funds-combine.js" %}
 {% endblock %}
 
 {% block page %}
