--- a/alpha/advertising/templates/advertising/campaign/edit.html
+++ b/alpha/advertising/templates/advertising/campaign/edit.html
@@ -3,6 +3,7 @@
 {% load url from future %} 
 {% load dictionary_tags %}
 {% load setup_advertising %}
+{% load gears %}
 
 {% block title %}
     {% blocktrans with profile.user.username as username %}
@@ -11,19 +12,11 @@
 {% endblock %} 
 
 {% block head %}
-    <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/advertising-setup.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/accounts/accounts.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/crop.css" rel="stylesheet" type="text/css" />
+    {% css_asset_tag "edit-advertising-combine.css" %}
+    {% js_asset_tag "edit-advertising-combine.js" %}
+    
     <link href="{{STATIC_URL}}fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen" />
-
-    <script src="{{STATIC_URL}}js/jquery.balloon.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>    
-    <script src="{{STATIC_URL}}js/create_event/venue_account_owner.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/advertising/total-price-calculation.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/date-range.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}fancybox/jquery.fancybox.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/advertising/setup-page.js" type="text/javascript"></script>
 {% endblock %}
 
 {% block page %}
