--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -7,11 +7,8 @@
 {% block head %}
 
     {% css_asset_tag 'browse-events-combine.css' %}
-
     <script type="text/javascript" src="{{STATIC_URL}}turbolinks/turbolinks.js"></script>
-
-    <script src="{{STATIC_URL}}js/featured/featured-event-viewer.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/browse/browse-page.js" type="text/javascript"></script>
+    {% js_asset_tag 'browse-events-combine.js' %}    
 {% endblock %}
 
 
