--- a/alpha/event/templates/events/setup_featured_event.html
+++ b/alpha/event/templates/events/setup_featured_event.html
@@ -1,19 +1,11 @@
 {% extends 'base.html' %}
 {% load date_formatting %}
 {% load cropping %}
+{% load gears %}
 
 {% block head %}
-    <link href="{{STATIC_URL}}styles/accounts/accounts.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/modal.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/crop.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/datepicker.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/featured/setup.css" rel="stylesheet" type="text/css" />
-    
-    <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js"></script>
-    <script src="{{STATIC_URL}}js/tabs.js"></script>
-    <script src="{{STATIC_URL}}js/jquery.balloon.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/featured/setup-page.js" type="text/javascript"></script>
+    {% css_asset_tag "setup-featured-combine.css" %}
+    {% js_asset_tag "setup-featured-combine.js" %}
 {% endblock %}
 
 {% block page %}
