--- a/alpha/venues/templates/venue_accounts/create_venue_account.html
+++ b/alpha/venues/templates/venue_accounts/create_venue_account.html
@@ -1,29 +1,21 @@
 {% extends 'base.html' %}
 {% load date_formatting %}
 {% load cropping %}
+{% load gears %}
 
 {% block head %}
-    <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/accounts/accounts.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}ajaxuploader/css/fileuploader.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}image_cropping/css/jquery.Jcrop.min.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/crop.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/place_autocomplete.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/venues/edit-venue.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/autoSuggest.css" rel="stylesheet" type="text/css" />
+    {% css_asset_tag "edit-venue-combine.css" %}
 
-    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en"></script>
-    
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en"></script>    
     <script src="{{STATIC_URL}}selectable/js/jquery.dj.selectable.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/location/jquery.geocomplete.js"></script>
 
     <script type="text/javascript">
         var crsf_token = "{{ csrf_token }}";
     </script>
 
-    <script src="{{STATIC_URL}}js/location/suggest_cityfusion_venue.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/venues/social-links.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/accounts/create-venue-page.js" type="text/javascript" ></script>
+    {% js_asset_tag "new-venue-combine.js" %}
     {{ form.media.js }}
 {% endblock %}
 
