--- a/alpha/venues/templates/venue_accounts/private_venue_account.html
+++ b/alpha/venues/templates/venue_accounts/private_venue_account.html
@@ -1,13 +1,10 @@
 {% extends 'base.html' %}
 {% load date_formatting %}
 {% load cropping %}
+{% load gears %}
 
 {% block head %}
-    <link href="{{STATIC_URL}}styles/browse/browse_event_list.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/browse/event_details.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/accounts/accounts.css" rel="stylesheet" type="text/css" />
-    <link href="{{STATIC_URL}}styles/profile-table.css" rel="stylesheet" type="text/css" />
-    <!--link href="{{STATIC_URL}}styles/venue_accounts.css" rel="stylesheet" type="text/css" /-->
+    {% css_asset_tag "view-venue-combine.css" %}    
 
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en"></script>
     <script>
@@ -15,10 +12,7 @@
             venue_account_latitude = {{ venue_account.venue.location.y }},
             venue_account_longtitude = {{ venue_account.venue.location.x }};
     </script>
-    <script src="{{STATIC_URL}}js/browse/jquery.hoverIntent.js" type="text/javascript"></script>
-    <script src="{{STATIC_URL}}js/searchpad/event-actions.js"></script>
-    <script src="{{STATIC_URL}}js/accounts/venue-account.js"></script>
-    <script src="{{STATIC_URL}}js/tabs.js"></script>
+    {% js_asset_tag "view-venue-combine.js" %}
 {% endblock %}
 
 {% block page %}
