--- a/alpha/home/assets/styles/styles.css
+++ b/alpha/home/assets/styles/styles.css
@@ -253,7 +253,7 @@ html.preview, body.preview {
     cursor: pointer;
 }
 
-.location-selection-wrapper:hover .location-text-box {
+.location-selection-wrapper.active .location-text-box {
     -moz-border-radius:0;
     -webkit-border-radius:0;
     border-radius:0;
@@ -317,7 +317,8 @@ html.preview, body.preview {
     font-size:12px !important;
 }
 
-.search-lists ul li a:hover
+.search-lists ul li a:hover,
+.search-lists ul li a.selected
 {
     background:#fff5e5;
     border:0px !important;
